--- a/apps/main/src/index.html
+++ b/apps/main/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <angular-font-awesome-root></angular-font-awesome-root>
+    <df-root />
   </body>
 </html>
